--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -57,6 +57,29 @@ ul, li {
   list-style-type: none;
 }
 
+.circle {
+  width: 40px;
+  height: 40px;
+  border: none;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.253);
+  cursor: pointer;
+}
+.circle img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+.circle i {
+  font-size: 20px;
+  line-height: 1.4;
+  color: rgba(255, 255, 255, 0.719);
+}
+
 .container_web {
   position: relative;
   width: 100%;
@@ -133,19 +156,21 @@ ul, li {
   background: none;
   font-size: 14px;
   color: #fff;
-  padding: 5px 0px 5px 25px;
+  padding: 5px 0px 5px 35px;
   border-radius: 8px;
   border: 1px solid #2f904b;
 }
 .container_web header .header .layout .head_right .search input:focus {
   outline: none;
   border: 1px solid #2f904b;
+  box-shadow: 0 0 15px rgba(47, 144, 74, 0.829);
 }
 .container_web header .header .layout .head_right .search i {
   color: #fff;
   font-size: 20px;
   position: absolute;
-  left: 4px;
+  left: 10px;
+  line-height: 1.6;
 }
 .container_web header .header .layout .head_right .caller {
   padding: 5px 50px 5px 10px;
