--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -51,13 +51,20 @@
                             <i class="bi bi-search"></i>
                             <input type="text" placeholder="Enter name part...">
                         </div>
-                        <div class="caller is-center">
+                        <div class="is-center" style="gap:10px; margin-left:20px;">
+                            <div class="circle"><i class="bi bi-bell"></i></div>
+                            <div class="circle"><i class="bi bi-cart"></i></div>
+                            <div class="circle">
+                                <img src="https://www.dropbox.com/scl/fi/wejke33icwbzgcb1xhhv4/2.jpg?rlkey=mi9dylwxime6zkcp4kgu1vlcx&st=0ghf9l3f&dl=1">
+                            </div>
+                        </div>
+                        {{!-- <div class="caller is-center">
                             <i class="bi bi-telephone-fill"></i>
                             <div class="contact_phone">
                                 Hãy gọi chúng tôi <br>
                                 <span>0927 444 888</span>
                             </div>
-                        </div>
+                        </div> --}}
                     </div>
                 </div>
             </div>
