--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -233,7 +233,7 @@ ul,li{
                 .company_intro{
                     max-width: 80%;
                     .text_intro{
-                        text-align: left;
+                        text-align: justify;
                         display: block;
                         margin-block-start: 1em;
                         margin-block-end: 1em;
