--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -33,16 +33,16 @@
 <div class="index_product layout">
     <ul class="product_tab is-between">
         <li class="tab_item is-center active ">
-            Tay vịn thang cuốn
+            COP - LOP
         </li>
         <li class="tab_item is-center ">
-            Bậc thang cuốn/Pallet
+            linh kiện điện 
         </li>
         <li class="tab_item is-center ">
-            Chuỗi bậc thang cuốn
+            linh kiện inox
         </li>
         <li class="tab_item is-center ">
-            Con lăn thang cuốn
+           linh kiện thép
         </li>
     </ul>
     <div class="list_card">
