--- a/src/resources/views/about.hbs
+++ b/src/resources/views/about.hbs
@@ -1,4 +1,4 @@
-<div class="wrapper_about">
+<div class="wrapper_about animation-top">
     <div class="layout is-between">
         <div class="title_about">
             <div class="heading">
@@ -33,7 +33,7 @@
     </div>
 </div>
 
-<div class="content_container">
+<div class="content_container animation-top">
     <div class="wrapper">
         <div class="content">
             <div class="title">
@@ -51,7 +51,7 @@
     </div>
 </div>
 
-<div class="wrapper_about">
+<div class="wrapper_about animation-top">
     <div class="layout is-between">
         <div class="wrapp_image_about">
             <img src="/img/about/1.png" alt="">
@@ -74,7 +74,7 @@
     </div>
 </div>
 
-<div class="content_container">
+<div class="content_container animation-top">
     <div class="wrapper" style="padding: 20px 0; margin: 0 0 20px 0;">
         <div class="content">
             <div class="title">
@@ -101,7 +101,7 @@
     </div>
 </div>
 
-<div class="wrapper_about">
+<div class="wrapper_about animation-top">
     <div class="heading-custumer is-center">
         Custumer Case
     </div>
@@ -118,7 +118,7 @@
     </div>
 </div>
 
-<div class="content_container .reset_padding" >
+<div class="content_container .reset_padding animation-top">
     <div class="wrapper" style="padding: 20px 0; margin: 0;">
         <div class="content">
             <h3 class="title">
