--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -10,23 +10,29 @@
     </div>
 </div>
 
-<div class="introduct layout is-between">
-    <div class="heading_intro"> 
-        <h1>viet phat</h1>
-        <h2>focus on <br>
-            retail elevator components
-        </h2>
-        <div class="company_intro">
-            <p class="text_intro">
-                Công ty TNHH Phụ tùng thang máy Việt Phát là một công ty thương mại đã tham gia tích cực vào ngành thang máy trong nhiều năm. Công ty đặt tại đường Thiên Lôi, Hải Phòng, Việt Nam. Mục tiêu chính của chúng tôi là cung cấp phụ kiện thang máy chất lượng cao, cải tạo kết nối điện, phụ kiện thang máy và các sản phẩm liên quan cho khách hàng toàn Việt Nam
-            </p>
-        </div>
-        <button class="btn-web more_btn_intro">Xem thêm</button>
-    </div>
+<div class="introduct">
+    <div class="wrapper_intro div_skew">
+        <div class="layout is-between">
+            <div class="heading_intro"> 
+                <h1>viet phat</h1>
+                <h2>focus on <br>
+                    retail elevator components
+                </h2>
+                <div class="company_intro">
+                    <p class="text_intro">
+                        Công ty TNHH Phụ tùng thang máy Việt Phát là một công ty thương mại đã tham gia tích cực vào ngành thang máy trong nhiều năm. Công ty đặt tại đường Thiên Lôi, Hải Phòng, Việt Nam. Mục tiêu chính của chúng tôi là cung cấp phụ kiện thang máy chất lượng cao, cải tạo kết nối điện, phụ kiện thang máy và các sản phẩm liên quan cho khách hàng toàn Việt Nam
+                    </p>
+                </div>
+                <button class="btn-web more_btn_intro">Xem thêm</button>
+            </div>
 
-    <div class="company_intro_img">
-        <img src="/img/slider/1.png" alt="">
+            <div class="company_intro_img animation-right">
+                <img src="/img/slider/1.png" alt="">
+            </div>
+        </div>
+        
     </div>
+    
 
 </div>
 
@@ -50,7 +56,8 @@
             <ul class="arrow_card is-between">
                 <li class="item_card">
                     <a href="/products/:slug" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
+                        <img class="fade-in" src="/img/products/1.jpg" alt="">
+                        <i class="bi bi-plus"></i>
                     </a>
                     <div class="title_product">
                         <h3>
@@ -67,7 +74,7 @@
             <ul class="arrow_card is-between">
                 <li class="item_card">
                     <a href="/products/detail" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
+                        <img class="fade-in" src="/img/products/1.jpg" alt="">
                     </a>
                     <div class="title_product">
                         <h3>
@@ -84,7 +91,7 @@
             <ul class="arrow_card is-between">
                 <li class="item_card">
                     <a href="/products/detail" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
+                        <img class="fade-in" src="/img/products/1.jpg" alt="">
                     </a>
                     <div class="title_product">
                         <h3>
@@ -101,7 +108,7 @@
             <ul class="arrow_card is-between">
                 <li class="item_card">
                     <a href="/products/detail" class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
+                        <img class="fade-in" src="/img/products/1.jpg" alt="">
                     </a>
                     <div class="title_product">
                         <h3>
@@ -122,7 +129,7 @@
         CUSTOMER VISIT News
     </div>
 
-    <div class="item_inner is-between">
+    <div class="item_inner is-between animation-top">
         <div class="text_inner">
             <div class="item_time">
                 DEC 4, 2024
@@ -138,11 +145,15 @@
             </p>
         </div>
         <div class="img_inner is-center">
-            <img src="/img/inner/2.jpg" alt="">
+            <div class="frame_skew ">
+                <a href="#" class="is-center">
+                    <img src="/img/inner/2.jpg" alt="">
+                </a>
+            </div>
         </div>
     </div>
 
-    <div class="item_inner is-between">
+    <div class="item_inner is-between animation-top">
         <div class="img_inner is-center">
             <img src="/img/inner/2.jpg" alt="">
         </div>
