--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -18,29 +18,29 @@
                         </a>
                     </figure>
                     <nav class="nav_wrapp">
-                        <ul class="head_nav is-between">
+                        <ul class="head_nav">
                             <li class="item_nav active tab-1">
-                                <a href="/">
+                                <a class="btn_befor" href="/">
                                     home
                                 </a>
                             </li>
                             <li class="item_nav tab-2">
-                                <a href="/products">
+                                <a class="btn_befor" href="/products">
                                     products
                                 </a>
                             </li>
                             <li class="item_nav tab-3">
-                                <a href="/news">
+                                <a class="btn_befor" href="/news">
                                     news
                                 </a>
                             </li>
                             <li class="item_nav tab-4">
-                                <a href="/about-us">
+                                <a class="btn_befor" href="/about-us">
                                     about us
                                 </a>
                             </li>
                             <li class="item_nav tab-5">
-                                <a href="/contact">
+                                <a class="btn_befor" href="/contact">
                                     contact us
                                 </a>
                             </li>
