--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -53,21 +53,8 @@
     </ul>
     <div class="list_card">
         <div class="list_card_container active">
-            <ul class="arrow_card is-between">
-                <li class="item_card">
-                    <a href="/products/:slug" class="wrapper_img">
-                        <img class="fade-in" src="/img/products/1.jpg" alt="">
-                        <i class="bi bi-plus"></i>
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-            </ul>
+            <ul class="arrow_card is-between cop-list-1"></ul>
+            <ul class="arrow_card is-between cop-list-2"></ul>
         </div>
 
         <div class="list_card_container">
@@ -155,7 +142,11 @@
 
     <div class="item_inner is-between animation-top">
         <div class="img_inner is-center">
-            <img src="/img/inner/2.jpg" alt="">
+            <div class="frame_skew skew_opposite">
+                <a href="#" class="is-center">
+                    <img src="/img/inner/2.jpg" alt="">
+                </a>
+            </div>
         </div>
         <div class="text_inner" style="text-align: left;">
             <div class="item_time">
