--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -135,6 +135,61 @@ ul, li {
   z-index: 1000;
 }
 
+.frame_skew {
+  transform: skew(-29deg) translateZ(0);
+  display: block;
+  padding: 0 15px 15px;
+}
+.frame_skew a {
+  box-shadow: -12px 12px 2px 1px rgba(0, 0, 0, 0.877);
+  border: 8px solid var(--color-main);
+  overflow: hidden;
+  position: relative;
+}
+.frame_skew a img {
+  transform: skew(29deg) scale(0.9);
+  max-width: 300px;
+  height: 300px;
+  margin: 0 90px;
+}
+.frame_skew a::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  -webkit-transition: all 0.6s ease-in-out;
+  -o-transition: all 0.6s ease-in-out;
+  transition: all 0.6s ease-in-out;
+}
+.frame_skew a:hover img {
+  transform: skew(29deg) scale(1.5);
+  transition: 0.6s ease-in;
+}
+.frame_skew a:hover::before {
+  background: rgba(54, 53, 53, 0.4431372549);
+}
+
+.skew_opposite {
+  transform: skew(29deg) translateZ(0);
+}
+.skew_opposite a {
+  box-shadow: 12px 12px 0 rgba(0, 0, 0, 0.7);
+}
+.skew_opposite a img {
+  transform: skew(-29deg) scale(0.9);
+}
+.skew_opposite a:hover img {
+  transform: skew(-29deg) scale(1.5);
+  transition: 0.6s ease-in;
+}
+.skew_opposite a:hover::before {
+  background: rgba(54, 53, 53, 0.4431372549);
+}
+
 /** START ANIMATION */
 .animation-right {
   opacity: 0;
@@ -460,39 +515,6 @@ ul, li {
 .container_web main .index_news .item_inner .img_inner {
   width: 50%;
   overflow: hidden;
-  justify-content: flex-end;
-}
-.container_web main .index_news .item_inner .img_inner .frame_skew {
-  transform: skew(-29deg) translateZ(0);
-}
-.container_web main .index_news .item_inner .img_inner .frame_skew a {
-  box-shadow: -12px 12px 0 rgba(0, 0, 0, 0.7);
-  border: 8px solid #c41722;
-  overflow: hidden;
-  position: relative;
-}
-.container_web main .index_news .item_inner .img_inner .frame_skew a img {
-  transform: skew(29deg) scale(0.9);
-  max-width: 300px;
-  height: 300px;
-  margin: 0 90px;
-}
-.container_web main .index_news .item_inner .img_inner .frame_skew a::before {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 1;
-  -webkit-transition: all 0.6s ease-in-out;
-  -o-transition: all 0.6s ease-in-out;
-  transition: all 0.6s ease-in-out;
-}
-.container_web main .index_news .item_inner .img_inner .frame_skew a:hover img {
-  transform: skew(29deg) scale(1.5);
-  transition: 0.6s ease-in;
 }
 .container_web main .wrapper_products {
   margin-top: 25px;
