--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -125,6 +125,60 @@ ul,li{
     box-shadow: 10px 10px 30px rgba(0, 0, 0, .5);
     z-index: 1000;
 }
+.frame_skew{
+    transform: skew(-29deg) translateZ(0);
+    display: block;
+    padding: 0 15px 15px;
+
+    a{
+        box-shadow: -12px 12px 2px 1px rgba(0, 0, 0, 0.877);
+        border: 8px solid var(--color-main);
+        overflow: hidden;
+        position: relative;
+        img{
+            transform: skew(29deg) scale(0.9);
+            max-width: 300px;
+            height: 300px;
+            margin: 0 90px;
+        }
+    }
+    a::before{
+        content: '';
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 1;
+        -webkit-transition: all .6s ease-in-out;
+        -o-transition: all .6s ease-in-out;
+        transition: all .6s ease-in-out;
+    }
+    a:hover img{
+        transform: skew(29deg) scale(1.5);
+        transition: .6s ease-in;
+    }
+    a:hover::before{
+        background: #36353571;
+    }
+}
+.skew_opposite{
+    transform: skew(29deg) translateZ(0);
+    a{
+        box-shadow: 12px 12px 0 rgba(0, 0, 0, .7); 
+        img{
+            transform: skew(-29deg) scale(0.9);
+        }
+    }
+    a:hover img{
+        transform: skew(-29deg) scale(1.5);
+        transition: .6s ease-in;
+    }
+    a:hover::before{
+        background: #36353571;
+    }
+}
 /** START ANIMATION */
 
 .animation-right {
@@ -459,39 +513,7 @@ ul,li{
                 .img_inner{
                     width: 50%;
                     overflow: hidden;
-                    justify-content: flex-end;
-                    .frame_skew{
-                        transform: skew(-29deg) translateZ(0);
-                        a{
-                            box-shadow: -12px 12px 0 rgba(0, 0, 0, .7);
-                            border: 8px solid #c41722;
-                            overflow: hidden;
-                            position: relative;
-                            img{
-                                transform: skew(29deg) scale(0.9);
-                                max-width: 300px;
-                                height: 300px;
-                                margin: 0 90px;
-                            }
-                        }
-                        a::before{
-                            content: '';
-                            display: block;
-                            width: 100%;
-                            height: 100%;
-                            position: absolute;
-                            left: 0;
-                            top: 0;
-                            z-index: 1;
-                            -webkit-transition: all .6s ease-in-out;
-                            -o-transition: all .6s ease-in-out;
-                            transition: all .6s ease-in-out;
-                        }
-                        a:hover img{
-                            transform: skew(29deg) scale(1.5);
-                            transition: .6s ease-in;
-                        }
-                    }
+                    
                 }
             }
         }
