--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -58,37 +58,13 @@
         </div>
 
         <div class="list_card_container">
-            <ul class="arrow_card is-between">
-                <li class="item_card">
-                    <a href="/products/detail" class="wrapper_img">
-                        <img class="fade-in" src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-            </ul>
+            <ul class="arrow_card is-between dien-list-1"></ul>
+            <ul class="arrow_card is-between dien-list-2"></ul>
         </div>
 
         <div class="list_card_container">
-            <ul class="arrow_card is-between">
-                <li class="item_card">
-                    <a href="/products/detail" class="wrapper_img">
-                        <img class="fade-in" src="/img/products/1.jpg" alt="">
-                    </a>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-            </ul>
+            <ul class="arrow_card is-between inox-list-1"></ul>
+            <ul class="arrow_card is-between inox-list-2"></ul>
         </div>
 
         <div class="list_card_container">
