--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -125,7 +125,7 @@
             </footer>
         </main>
     </div>
-    <script src="/js/app.js"></script>
+    <script src="/js/app.js" defer></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="/config/config.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
