--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -12,9 +12,9 @@
         <header class="header_wrapp">
             <div class="header">
                 <div class="layout is-between">
-                    <figure class="logo">
-                        <a href="#" class="is-center" title="Phụ Kiện Thang Máy">
-                            <img src="https://admin.hybridlift.vn/Files/Images/Template/Logos/logo.png" alt="">
+                    <figure class="logo is-center">
+                        <a href="#"  title="Phụ Kiện Thang Máy">
+                            <img src="/img/logo.png" alt="">
                         </a>
                     </figure>
                     <nav class="nav_wrapp">
