--- a/src/resources/views/contact.hbs
+++ b/src/resources/views/contact.hbs
@@ -7,10 +7,11 @@
     <h1 class="title_form">Leave Your Message</h1>
     <form class="form_contact">
         <ul>
-            <li><input type="text" placeholder="* Full name" name="Name"></li>
-            <li><input type="email" name="Email" placeholder="* Email(We will reply you via email in 24 hours)"></li>
-            <li><input type="tel" name="Phone" placeholder="* Phone/WhatsApp/WeChat (Very important)"></li>
-            <li><textarea name="Message" placeholder="* Enter product details such as size, color, materials etc. and other specific requirements to receive an accurate quote."></textarea></li>
+            <li><input type="text" placeholder="* Full name" name="name"></li>
+            <li><input type="email" name="email" placeholder="* Email(We will reply you via email in 24 hours)"></li>
+            <li><input type="tel" name="phone" placeholder="* Phone/WhatsApp/WeChat (Very important)"></li>
+            <li><input type="text" name="subject" placeholder="* Subject contact"></li>
+            <li><textarea name="message" placeholder="* Enter product details such as size, color, materials etc. and other specific requirements to receive an accurate quote."></textarea></li>
             <li><input type="submit" value="Send" class="submit"></li>
         </ul>
     </form>
